Create del Prof. con work images y profession, cambio en model professional y professional_workday, cambiado en route el file.filename de avatar a workImage y comentado workDays y shifts del ejs para que no se rompa al cargar

--- a/views/professionals/profPerProfession.ejs
+++ b/views/professionals/profPerProfession.ejs
@@ -47,10 +47,10 @@
           </div>
           <div class="reserved-date">
             <p>
-              <%=professionals[i].workDays[0].day %>
+              <%#=professionals[i].workDays[0].day %>
             </p>
             <p>
-              <%=professionals[i].shifts[0].shift %>
+              <%#=professionals[i].shifts[0].shift %>
             </p>
           </div>
           <div class="reserved-date">
