--- a/views/professionals/professionalDetail.ejs
+++ b/views/professionals/professionalDetail.ejs
@@ -132,7 +132,7 @@
             <% if(user.id==professional.client_id){ %>
               <div class="buttons-below-avatar">
                 <div>
-                  <a href="/rubros/<%=professional.professions.profession %>/<%=professional.client_id %>/editProf">
+                  <a href="/rubros/rubro/<%=professional.client_id %>/editProfTest">
                     <button type="submit" style="width: 25vw;">Editar Perfil</button>
                   </a>
                 </div>
