Terminado el RegisterProf con db (controlador y vista)

--- a/views/partials/nav-bar.ejs
+++ b/views/partials/nav-bar.ejs
@@ -28,7 +28,7 @@
                     </div>
                     <% }else if(locals.userProf !=undefined){ %>
                         <div class="session-icons">
-                            <a href="/rubros/<%= locals.userProf.jobTitle %>/<%= locals.userProf.cuit %>">
+                            <a href="/clients/<%= locals.userProf.jobTitle %>/<%= locals.userProf.cuit %>">
                                 <p><i class="fas fa-user"></i></p>
                             </a>
                             <a href="/signout">
