--- a/views/users/clientDetail.ejs
+++ b/views/users/clientDetail.ejs
@@ -15,9 +15,10 @@
         <link rel="stylesheet" href="/css/desktop-index.css" />
         <link rel="stylesheet" href="/css/desktop-productDetail.css" />
 
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-        <script src="/js/deleteAlert.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
+        <!-- <script src="/js/deleteAlert.js"></script> -->
 
         <title>Soluciones Profesionales</title>
 </head>
@@ -31,10 +32,10 @@
             <main>
                 <div class="allProduct">
                     <div class="prof-title-father">
-                        
+
                         <h2 class="title-per-device-productDetail">Perfil de:</h2>
 
-                        
+
                         <p class="name-per-device-productDetail">
                             <%= clientFound.firstName + " " + clientFound.lastName %>
                         </p>
@@ -43,38 +44,46 @@
                     <div class="columns-productDetail-father">
                         <!-- <div class="column12-productDetail"> -->
 
-                            <!-- <div class="top-flex-mobile"> -->
-                                <div class="prof-avatar">
-                                    <!-- Foto cargada por el cliente (.jpg, .png, .bmp) -->
+                        <!-- <div class="top-flex-mobile"> -->
+                        <div class="prof-avatar">
+                            <!-- Foto cargada por el cliente (.jpg, .png, .bmp) -->
 
-                                    <img src="/images/clients/<%=clientFound.avatar%>">
-                                </div>
+                            <img src="/images/clients/<%=clientFound.avatar%>">
+                        </div>
 
-                            <!-- </div> -->
+                        <!-- </div> -->
                         <!-- </div> -->
                         <!-- <div class="column22-productDetail"> -->
-                            
-                            <div class="details">
-                                <div class="details-info">
-                                    <h2 class="title-prof-name">Mis Datos</h2>
-                                </div>
-                                <div class="details-info">
-                                    <p>Email: </p>
-                                    <p> <%=clientFound.email %></p>
-                                </div>
-                                <div class="details-info">
-                                    <p>DNI: </p>
-                                    <p> <%=clientFound.dni%></p>
-                                </div>
-                                <div class="details-info">
-                                    <p>Ciudad: </p>
-                                    <p> <%=clientFound.city_Id%></p>
-                                </div>
-                                <div class="details-info">
-                                    <p>Direccion: </p>
-                                    <p> <%=clientFound.address %></p>
-                                </div>
+
+                        <div class="details">
+                            <div class="details-info">
+                                <h2 class="title-prof-name">Mis Datos</h2>
                             </div>
+                            <div class="details-info">
+                                <p>Email: </p>
+                                <p>
+                                    <%=clientFound.email %>
+                                </p>
+                            </div>
+                            <div class="details-info">
+                                <p>DNI: </p>
+                                <p>
+                                    <%=clientFound.dni%>
+                                </p>
+                            </div>
+                            <div class="details-info">
+                                <p>Ciudad: </p>
+                                <p>
+                                    <%=clientFound.city_Id%>
+                                </p>
+                            </div>
+                            <div class="details-info">
+                                <p>Direccion: </p>
+                                <p>
+                                    <%=clientFound.address %>
+                                </p>
+                            </div>
+                        </div>
 
                         <!-- </div> -->
 
@@ -86,9 +95,9 @@
                                 <button type="submit">Editar Perfil</button>
                             </a>
                         </div>
-                        <form id="delete-form" class="delete-form" action="/clients/<%= clientFound.dni %>/deleteClient?_method=DELETE" method="post">
-
-                                <button type="submit">Eliminar Perfil</button>
+                        <form id="delete-form" class="delete-form"
+                            action="/clients/<%= clientFound.dni %>/deleteClient?_method=DELETE" method="post">
+                            <button type="submit">Eliminar Perfil</button>
 
                         </form>
                     </div>
