Solucionados links rotos en distintas vistas y navbar. Agregado de imgs en profDetail con consulta a db

--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -190,3 +190,7 @@ main {
 .confirm-button button:hover {
   box-shadow: 6px 6px 30px rgb(248, 212, 92);
 }
+
+.workImages {
+  text-align: center;
+}
