--- a/public/css/registerProf.css
+++ b/public/css/registerProf.css
@@ -79,3 +79,8 @@ main {
   padding-left: 15px;
   font-size: 13px;
 }
+
+/* Cuando implementemos el script del select licence */
+/* .licence {
+  display: none;
+} */
