--- a/views/users/clientDetail.ejs
+++ b/views/users/clientDetail.ejs
@@ -103,24 +103,24 @@
                     </div>
 
                     <h3 class=" title-categories">Tambien te Puede Interesar</h3>
-                    <!-- <section class="icon-categories">
+                    <section class="icon-categories">
                         <article class="icon-article">
                             
-                            <a href="../rubros/Mecanico">
+                            <a href="../rubros/Mecanica">
                               
                                 <i class="fas fa-wrench"></i>
                                 <p class="icon-txt">Mecanicos/as</p>
                             </a>
                         </article>
                         <article class="icon-article">
-                            <a href="../rubros/Electricista">
+                            <a href="../rubros/Electricidad">
                                 
                                 <i class="fas fa-plug"></i>
                                 <p class="icon-txt">Electricistas</p>
                             </a>
                         </article>
                         <article class="icon-article">
-                            <a href="../rubros/Odontologo">
+                            <a href="../rubros/Odontologia">
                                 
                                 <i class="fas fa-tooth"></i>
                                 <p class="icon-txt">Odontologos/as</p>
@@ -128,7 +128,7 @@
                         </article>
 
                         <article class="icon-article">
-                            <a href="../rubros/Plomero">
+                            <a href="../rubros/Plomeria">
                                
                                 <i class="fas fa-faucet"></i>
                                 <p class="icon-txt">Plomeros/as</p>
@@ -136,7 +136,7 @@
                         </article>
 
                         <article class="icon-article">
-                            <a href="../rubros/Carpintero">
+                            <a href="../rubros/Carpinteria">
                               
                                 <i class="fas fa-hammer"></i>
                                 <p class="icon-txt">Carpinteros/as/
@@ -144,13 +144,13 @@
                             </a>
                         </article>
                         <article class="icon-article">
-                            <a href="../rubros/Pintor">
+                            <a href="../rubros/Pintura">
                              
                                 <i class="fas fa-paint-roller"></i>
                                 <p class="icon-txt">Pintores/as</p>
                             </a>
                         </article>
-                    </section> -->
+                    </section>
 
                     <%- include("../partials/ad-bottom-body") %>
 
