--- a/views/professionals/professionalDetail.ejs
+++ b/views/professionals/professionalDetail.ejs
@@ -42,7 +42,7 @@
 
               <div class="top-flex-mobile">
                 <div class="prof-avatar">
-                  <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
+                  <img src="/images/clients/<%=professional.clients.avatar%>">
                 </div>
 
                 <div class="rating-father">
@@ -92,8 +92,8 @@
                 <div>
                   <p>Zona:<%=" " +professional.workZones.location %>
                   </p>
-                  <p>Matricula:<%if(professional.license){%>
-                      <%=" " +professional.license %> 
+                  <p>Matricula:<%if(professional.licence){%>
+                      <%=" " +professional.licence %> 
                   <%}else{ %>
                     <%=" No Posee" %>
                       <% } %>
@@ -118,14 +118,9 @@
               <%=professional.whyMe %>
             </p>
           </div>
-          <div class=" prof-detail-text">
+          <div class="prof-detail-text workImages">
             <p class="prof-detail-title-text">Fotos de mis Trabajos Realizados:</p>
-            <p class="prof-txt">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus repellat dolor quo inventore expedita
-              aperiam quae dicta totam nihil delectus eveniet, beatae dignissimos architecto a dolorum, deleniti, non
-              quia
-              corrupti?
-            </p>
+            <img src="/images/professionals/<%= professional.workImages.imageTitle %>" alt="aca va tu foto">
           </div>
           <% if(user!=undefined){ %>
             <p> %> </p>
@@ -133,7 +128,7 @@
             <% if(user.id==professional.client_id){ %>
               <div class="buttons-below-avatar">
                 <div>
-                  <a href="/rubros/rubro/<%=professional.client_id %>/editProfTest">
+                  <a href="/rubros/rubro/<%=professional.client_id %>/editProf">
                     <button type="submit" style="width: 25vw;">Editar Perfil</button>
                   </a>
                 </div>
@@ -149,24 +144,25 @@
                 <%} %>
 
                   <h3 class=" title-categories">Tambien te Puede Interesar</h3>
+                  
                   <section class="icon-categories">
                     <article class="icon-article">
                       <!-- meter if en los links para /rubros/plomero o /dentista -->
-                      <a href="../Mecanico">
+                      <a href="../Mecanica">
                         <!-- mecanica auto 1-->
                         <i class="fas fa-wrench"></i>
                         <p class="icon-txt">Mecanicos/as</p>
                       </a>
                     </article>
                     <article class="icon-article">
-                      <a href="../Electricista">
+                      <a href="../Electricidad">
                         <!-- electricista 2-->
                         <i class="fas fa-plug"></i>
                         <p class="icon-txt">Electricistas</p>
                       </a>
                     </article>
                     <article class="icon-article">
-                      <a href="../Odontologo">
+                      <a href="../Odontologia">
                         <!-- dentistas 3-->
                         <i class="fas fa-tooth"></i>
                         <p class="icon-txt">Odontologos/as</p>
@@ -174,7 +170,7 @@
                     </article>
 
                     <article class="icon-article">
-                      <a href="../Plomero">
+                      <a href="../Plomeria">
                         <!-- plomeria 4-->
                         <i class="fas fa-faucet"></i>
                         <p class="icon-txt">Plomeros/as</p>
@@ -182,7 +178,7 @@
                     </article>
 
                     <article class="icon-article">
-                      <a href="../Carpintero">
+                      <a href="../Carpinteria">
                         <!-- carpinteria 5-->
                         <i class="fas fa-hammer"></i>
                         <p class="icon-txt">Carpinteros/as/
@@ -190,7 +186,7 @@
                       </a>
                     </article>
                     <article class="icon-article">
-                      <a href="../Pintor">
+                      <a href="../Pintura">
                         <!-- pintores 6-->
                         <i class="fas fa-paint-roller"></i>
                         <p class="icon-txt">Pintores/as</p>
