--- a/views/professionals/registerProf.ejs
+++ b/views/professionals/registerProf.ejs
@@ -16,6 +16,7 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 
+    <!-- <script src="/js/professionalForm.js"></script> -->
     <title>Soluciones Profesionales</title>
 </head>
 
@@ -50,16 +51,16 @@
                 <input type="text" name="otherJob" id="otherJob" placeholder="Ej: Programador WEB Full Stack">
               </label>
             </div>
-            <div class="registerInput expirience-list">
+            <div class="registerInput experience-list">
               <label>Posee Matricula:
-                <select name="expirience">
-                  <option value="yes" selected>Si</option>
-                  <option value="no">No</option>
+                <select name="have-licence">
+                  <option value="no" selected>No</option>
+                  <option value="yes">Si</option>
                 </select>
               </label>
             </div>
 
-            <div class="registerInput">
+            <div class="registerInput licence" id="licence-div">
               <label for="licence">Matricula (en Caso de Aplicar):
                 <input type="text" name="licence" id="licence">
               </label>
